5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1850_1276.log
== TEST (2019-06-21 00:03:39) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a matriz: ")))
h=shape(x)[0]
t=zeros(h,dtype=int)

for i in range(h):
	t[i]=sum(x[i,:])
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:03:57) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a matriz: ")))
h=shape(x)[0]
t=zeros(h,dtype=int)

for i in range(h):
	t[i]=sum(x[j,:])
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:04:13) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a matriz: ")))
h=shape(x)[0]
t=zeros(h,dtype=int)

for i in range(h):
	t[i]=sum(x[:,i])
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:05:25) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a matriz: ")))
t=zeros(7,dtype=int)

for i in range(7):
	t[i]=sum(x[:,i])
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:06:41) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a matriz: ")))
t=zeros(7,dtype=int)

for i in range(7):
	t[i]=sum(x[:,i])
print(max(t))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:07:47) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a matriz: ")))
t=zeros(7,dtype=int)

for i in range(7):
	t[i]=sum(x[:,i])
for i in range()	
-- ERROR:
File "XXXX", line 7
    for i in range()	
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:09:12) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a matriz: ")))
t=zeros(7,dtype=int)

for i in range(7):
	t[i]=sum(x[:,i])
for i in range(7):
	if t[i] == max(t):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-21 00:09:22) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a matriz: ")))
t=zeros(7,dtype=int)

for i in range(7):
	t[i]=sum(x[:,i])
for i in range(7):
	if t[i] == max(t):
		print(i+1)
-- EXECUTION TIME:
1.26851
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
